<resources>
    <string name="app_name">DeviceDetector:Find WiFi</string>
    <string name="app_name_main">Wi-Fi Device Sanner</string>
    <string name="app_wifi_check">Wi-Fi Device Sanner</string>当前连接Wi-Fi:
    <string name="wifi">Wi-Fi:</string>
    <string name="ip">IP:</string>
    <string name="home_des">  </string>
    <string name="app_camera_check">Infrared Detect</string>
    <string name="device_info">Device Info</string>
    <string name="suspicious_device">Suspicious Devices</string>
    <string name="main_scan_wifi">Scan Network</string>
    <string name="main_scan_network">Scan Network</string>
    <string name="subscribe">Subscribe</string>
    <string name="copy">COPY MAC-ADDRESS</string>
    <string name="main_searching_founded">Founded</string>
    <string name="found">Found</string>
    <string name="main_searching_area">Scanning 11 from 235 IP range</string>
    <string name="main_searching_finish">Scanning Finished</string>
    <string name="scanning">Scanning</string>
    <string name="from">from</string>
    <string name="ip_range">IP range</string>
    <string name="list_empty">empty</string>
    <string name="suspicious">Suspicious Device</string>
    <string name="suspicious_devices">suspicious device</string>
    <string name="device_scanning">Scanning...</string>
    <string name="ok">ok</string>

    <string name="my_iPhone">My IPhone</string>
    <string name="main_searching_finish_describe">Now you can manager devices,check their ping and more</string>
    <string name="main_searching_finish_describetwo">You can view and monitor suspicious devices on your network</string>
    <string name="main_searching_closed">Do not close the application during the entire scanning process, otherwise it will interrupt the process</string>
    <string name="subscribe_description">Wi-Fi Device Detector provide . 1 Month 9.99＄ ，6Month 24.99＄ . The purchase of a subscription will be charged from your Apple ID account tied to the App Store or from your iTunes account. To unsubscribe, go to the App Store, go to "Account Settings - Subscription Record", and unsubscribe. If you do not cancel the automatic renewal function 24 hours before the subscription period expires, the subscription will be automatically renewed and deducted.</string>
    <string name="safety_description">Wi-Fi Device Detector provide . 1 Month 9.99＄ ，6Month 24.99＄ . The purchase of a subscription will be charged from your Apple ID account tied to the App Store or from your iTunes account. To unsubscribe, go to the App Store, go to "Account Settings - Subscription Record", and unsubscribe. If you do not cancel the automatic renewal function 24 hours before the subscription period expires, the subscription will be automatically renewed and deducted.</string>

    <string name="unlimited">Unlimited detection of devices</string>
    <string name="scan">Scan devices using technology</string>
    <string name="deep">Deep detect and list all device information</string>
    <string name="fully">Fully guarantees privacy and security</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Wi-Fi Detect</string>
    <string name="title_dashboard">Infrared Detect</string>
    <string name="title_notifications">Guide</string>
    <string name="safety_strategy">Guidebook</string>
    <string name="safety_be_secretly">How to prevent being photographed secretly</string>
    <string name="safety_be_can_appear">Picture camera where it might appear</string>
    <string name="safety_strategy_action">Anti-candid action</string>
 <!--   <string name="safety_strategy_importantplace">Focus on！</string>-->
    <string name="safety_strategy_importantplace">Focus on location！</string>
    <string name="safety_strategy_place">Anti-sneak shooting important prevention location</string>
    <string name="safety_strategy_out">How to prevent being photographed secretly when traveling</string>
   <!-- <string name="safety_strategy_house">Home Security</string>-->
    <string name="safety_strategy_house"> Home Security</string>
    <string name="safety_strategy_live">How to prevent sneak shots when you live</string>
   <!-- <string name="safety_strategy_live">How to prevent spying when Living</string>-->
    <string name="safety_strategy_help">If you are secretly photographed, call the police on time and ask the people around you for help.</string>
<!--
    <string name="safety_strategy_hostel">Rented hourses,hotels and even some upscale hotels.</string>
-->
    <string name="safety_strategy_hostel">Rented houses, hotels, and even some upscale hotels.</string>
<!--
    <string name="safety_strategy_notice">1.When suing rental housing, pay attention to check the power socket holes,bath mirrors(especially in combination with one-way glass),smoke detectors,lamp sockets,ceillings,key holes,etc,and pay special attention to whether there are suspicious objects around the room.Wires,these are probably the power and signal wires for the hidden camera。</string>
-->
    <string name="safety_strategy_notice">1.When using a rental property, check everywhere for electrical outlet holes, bathroom mirrors (especially in combination with one-way glass), smoke detectors, light sockets...</string>
    <string name="safety_strategy_out_import_des">The most effective way to visually cut off the possibility of candid shots. Taking safety pants as an example, if you wear safety pants when wearing a skirt, it can more effectively protect personal privacy...。</string>
    <string name="safety_strategy_skirt_des">1.Stay away from any unidentified objects moving down your skirt, whether it is a cane, or a shoe, or a remote-controlled toy. At present, many pinhole cameras have been made very small, and some professional candid shots can often produce some incredible equipment.</string>
    <string name="safety_strategy_shoes_des">2.Stay away from people tying your shoes next to you.</string>
    <string name="safety_strategy_rental_housing">2.When using the furniture attached to the rental house, check the air-conditioning hole, the telephone may be monitored) and the top of the wardrobe.</string>
    <string name="safety_strategy_des">3.Stay away from crutches near you, or black plastic bags, bags, etc. that are lower than a girl skirt</string>
    <string name="safety_strategy_qiquan">3.When staying in hotels, guesthouses, and guest houses, there are many places where pinhole cameras can be installed due to the hotel’s complete equipment, including air conditioners, lampshades, ceilings, vanity mirrors, smoke sensors, vases, sockets, and TV stands. Pay special attention to Equipment and furnishings facing the bed.</string>
    <string name="safety_strategy_shopping_des">4.In shopping malls, locker rooms, public toilets and other places, you must first check whether there are mobile phones and cameras left behind.</string>
    <string name="safety_strategy_traffic">1.Bus and subway</string>
    <string name="safety_strategy_elevator_stairs">2.Stairs Or Elevator</string>
    <string name="safety_strategy_street_bridge">3.Overpass</string>
    <string name="safety_strategy_fitting_washroom">4.Fitting room and bathroom</string>
    <string name="safety_strategy_traffic_des">If you are sitting on a seat, it is best to put your hands or books, bags and other items on your lap and keep your legs together, while your legs are upright; if you are standing, it is best to choose an area where women are concentrated, and be vigilant.</string>
    <string name="safety_strategy_elevator_des">When going up the stairs, try to walk on the side of the wall and tighten your shorts with one hand, and be careful not to walk too much; when taking the elevator, it is best to stand sideways or fold your legs. Standing sideways often makes those sneakers unable to recover. Be aware of suspicious people under or behind the stairs.</string>
    <string name="safety_strategy_bridge_des">When crossing an overpass, it is generally easy to be photographed walking on both sides, but walking in the middle can greatly reduce the risk.</string>
    <string name="safety_strategy_washroom_des">When changing clothes and going to the toilet, pay attention to whether there are sneak-camera devices around, pay special attention to the space above the head and under the feet, and pay special attention to the trash can when using public toilets; secondly, you should also pay attention to whether there are suspicious objects in or below the toilet, as perverts may Wireless pinholes are hidden inside for candid shots; in hot spring swimming pools, whether there are suspicious items in the dressing room, and at the same time, pay attention to candid shots of the same sex, and be alert to whether someone is approaching with a basket or bag during summer entertainment.</string>
    <string name="safety_strategy_notice_des">When using a rental property, check everywhere for electrical outlet holes, bathroom mirrors (especially in combination with one-way glass), smoke detectors, light sockets...。</string>
    <string name="safety_strategy_palce_des">Hotels, guesthouses, and homestays are all equipped with fixed-position candid camera equipment. Usually by means of a wired line for continuous power supply and signal transmission...。</string>
    <string name="safety_strategy_more">There are many other places, such as tissue boxes, sound, hooks, clocks and so on, where these cameras are invisible.</string>
    <string name="setting">Setting</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="restore">Restore</string>
    <string name="subscribe_purchase">Subscribe</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_service">Terms of service</string>
    <string name="feekback">Feedback</string>
    <string name="share">Share</string>
    <string name="leave_message">Leave Message</string>
    <string name="subscirbe_des">Easily find and detect hidden wireless devices around you</string>
    <string name="subscirbe_des_new">Detects Hidden Devices Around You</string>
    <string name="one_month">1 Month</string>
    <string name="one_week">1 Week</string>
    <string name="six_month">6 Months</string>
    <string name="pay">9.99 $</string>
    <string name="sevent_pay">$7.99 </string>
    <string name="two_pay">$2.99 </string>
    <string name="nineth_pay">$19.99 </string>
    <string name="pay_six">24.99 $</string>
    <string name="two_week">$2.00/week</string>
    <string name="three_week">$2.99/week</string>
    <string name="onepointsix_week">$1.67/week</string>
    <string name="most_popular">Most popular</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="months">Months</string>
    <string name="tv">TV</string>
    <string name="socket">Socket</string>
    <string name="desk_lamp">DeskLamp</string>
    <string name="bedside_cabinet">BedsideCabinet</string>
    <string name="tv_cabinet">TV Cabinet</string>
    <string name="wardrobe">Wardrobe</string>
    <string name="soft">Soft</string>
    <string name="smoke_detector">Smoke Detector</string>
    <string name="shower_head">Shower Head</string>
    <string name="flower_vase">Flower_Vase</string>
    <string name="aircondition">Aircondition</string>
    <string name="remote_control">Remote Control</string>
    <string name="router">Router</string>
    <string name="humidifier">Humidifier</string>
    <string name="mirror">Mirror</string>
    <string name="sensor">Sensor</string>
    <string name="for_example">For_example</string>
    <string name="click_below">Click below to start checking</string>
</resources>