<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <LinearLayout
        android:id="@+id/rootview"
        android:paddingHorizontal="@dimen/dp14"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:src="@mipmap/icon_back"
                android:padding="@dimen/dp5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safety_strategy"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/mainRefresh"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="14dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:text="@string/safety_be_secretly"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:text="@string/safety_be_can_appear"
                    android:textColor="@color/white"
                    android:textSize="17sp" />




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/safety_strategy_palce_des"
                    android:textColor="@color/white"
                    android:textSize="17sp" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/for_example"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor"
                    android:layout_marginTop="@dimen/dp15"
                    android:textColor="@color/color_3FFFFB"
                    android:textSize="17sp"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/videoCgqIv"
                    android:src="@mipmap/icon_cgq"
                    android:layout_marginTop="@dimen/dp15"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/socket"
                    android:layout_marginTop="@dimen/dp15"
                    android:textColor="@color/color_3FFFFB"
                    android:textSize="17sp"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/videoCzIv"
                    android:src="@mipmap/icon_chazuo"
                    android:layout_marginTop="@dimen/dp15"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/router"
                    android:layout_marginTop="@dimen/dp15"
                    android:textColor="@color/color_3FFFFB"
                    android:textSize="17sp"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/videoRouterIv"
                    android:src="@mipmap/icon_router"
                    android:layout_marginTop="@dimen/dp15"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/safety_strategy_more"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/safety_strategy_importantplace"
                    android:layout_marginTop="@dimen/dp15"
                    android:textColor="@color/color_3FFFFB"
                    android:textSize="17sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/safety_strategy_notice"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/safety_strategy_rental_housing"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/safety_strategy_qiquan"
                    android:textColor="@color/white"
                    android:textSize="17sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/safety_strategy_help"
                    android:textColor="@color/color_3FFFFB"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</layout>